--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,17 +16,30 @@
     <table class="table">
       <thead>
         <tr>
-          <th scope="col">Short URL</th>
+          <th scope="col">Short URL</th> 
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
+          
         </tr>
+       
+
       </thead>
+      
       <tbody>
         <% for(let url in urls) { %>
+         
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            
+            <td><%= urls[url] %>
+              <td>
+                <form method="POST" action="/urls/<%= url %>/delete">
+                  <button type="submit" class="btn btn-outline-danger">Delete</button>
+                </form>
+              </td>
           </tr>
-        <% } %>
+        
+          <% } %>
       </tbody>
     </table>
   </main>
