--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,6 +18,7 @@
         <tr>
           <th scope="col">Short URL</th> 
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
           
         </tr>
@@ -32,10 +33,19 @@
             <td><%= url %></td>
             
             <td><%= urls[url] %>
+              
               <td>
+                <form method="POST" action="/urls/<%= url %>/edit">
+                  <button type="submit" class="btn btn-outline-danger">Edit</button>
+                </td>
+                
+                  <td>
                 <form method="POST" action="/urls/<%= url %>/delete">
                   <button type="submit" class="btn btn-outline-danger">Delete</button>
+                  </td>
+                
                 </form>
+              
               </td>
           </tr>
         
