--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,20 +34,19 @@
             
             <td><%= urls[url] %>
               
-              <td>
+              
+                 <td>
                 <form method="POST" action="/urls/<%= url %>/edit">
                   <button type="submit" class="btn btn-outline-danger">Edit</button>
+                </form>
                 </td>
-                
-                  <td>
+                <td>
                 <form method="POST" action="/urls/<%= url %>/delete">
                   <button type="submit" class="btn btn-outline-danger">Delete</button>
-                  </td>
-                
                 </form>
               
               </td>
-          </tr>
+          
         
           <% } %>
       </tbody>
