--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,32 +2,29 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-success">
       <a class="navbar-brand" href="/urls">TinyApp</a>
       
-     
-      
-      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      
-        
       
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="/urls">My URLs</a>
           <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-
-          <!-- COOKIES -->
-            <% if (username) {%>
-              <form method= "POST" action="/logout">
-                <button  type="logout"  value="logout">Logout</button>
-              </form> 
-            <a class="navbar-brand" href="/urls">&nbsp;&nbsp;Logged in as <%= username %>!</a>
-        <%} else {%>
-          <form method= "POST" action="/login" id="cookies">
-            <input type="text" placeholder="asdasdas" name="username">
-            <button type="submit"  value="submit">Log in</button>
-          </form> 
+         
+          <% if (!user_id) {%>
+          <a class="nav-item nav-link" href="/register">Register</a>
+           
+          <a class="nav-item nav-link" href="/login">Login</a>
+          <%} else {%> 
+          
+            <a class="nav-item nav-link" method="get" action="/logout" href="/logout">Logout</a>
+          
           <%}%>
+            
+           
+            
+          </form> 
+        
         </div>
       </div>
     </nav>
