--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -12,11 +12,12 @@
   <div class="container">
   <form class="form-inline" action="/login" method="POST">
     <label for="email"><b>&nbsp;Email:&nbsp;&nbsp;</b></label>
-    <input type="text" placeholder="example@email.com" name="email" required>
-  </div>
-  <div>
+    <input type="text" placeholder="example@email.com" name="email">
+    <div>
+        
+    </div>
     <label for="psw"><b>&nbsp;&nbsp;Password:&nbsp;&nbsp;</b></label>
-    <input type="password" placeholder="Enter Password" name="password" required>
+    <input type="password" placeholder="Enter Password" name="password">
     &nbsp;&nbsp;&nbsp;
     <button type="submit" class="btn btn-primary">Login</button>
   </form>
