--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-success">
+    <nav class="navbar navbar-expand-md navbar-dark bg-info">
       <a class="navbar-brand" href="/urls">TinyApp</a>
       
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,7 +16,7 @@
            
           <a class="nav-item nav-link" href="/login">Login</a>
           <%} else {%> 
-          
+            
             <a class="nav-item nav-link" method="get" action="/logout" href="/logout">Logout</a>
           
           <%}%>
