--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,7 +18,7 @@
           <%} else {%> 
             
             <a class="nav-item nav-link" method="get" action="/logout" href="/logout">Logout</a>
-          
+            <a class="navbar-brand"></a>
           <%}%>
             
            
